package cl.ucn.disc.pa.kanto.pokemon;

/**
 * This class represent objects can be showable
 */

public interface Showable {

    /**
     * Show the property object
     */

    void show();

}
